MGS-505 TASK add padding to right of accordion header on mobile to prevent text overlapping arrow

--- a/resources/scss/components/_component.mobile-only-accordion.scss
+++ b/resources/scss/components/_component.mobile-only-accordion.scss
@@ -40,6 +40,7 @@
     &__title {
       display: block;
       margin: 0;
+      padding-right: 48px;
       top: 0;
     }
 
